[gd_scene load_steps=4 format=3 uid="uid://dx56sajit51w3"]

[ext_resource type="Script" uid="uid://hbv4aharmkne" path="res://Entities/Projectiles/basic_projectile.gd" id="1_ap673"]
[ext_resource type="Texture2D" uid="uid://cdp7n2ahp4jet" path="res://icon.svg" id="1_fx8hy"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ap673"]
radius = 6.0

[node name="BasicProjectile" type="Area2D"]
collision_layer = 3
collision_mask = 3
script = ExtResource("1_ap673")

[node name="ProjectileSprite" type="Sprite2D" parent="."]
scale = Vector2(0.09375, 0.09375)
texture = ExtResource("1_fx8hy")

[node name="ProjectileCollider" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ap673")

[node name="TTLTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 10.0
one_shot = true
autostart = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="TTLTimer" to="." method="_on_ttl_timer_timeout"]
